# elf-explorer

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  elf-explorer.rc
src/: main.rs
src/elf/: elf_header.rs  mod.rs  program_headers.rs  section_headers.rs
src/elf/sections/: mod.rs  strtab.rs
src/gui/: elf_header.rs  mod.rs  nav_panel.rs  pheaders.rs  sections.rs  sheaders.rs
src/gui/sections/: mod.rs  strtab.rs
src/utils/: conversions.rs  gui_utils.rs  mod.rs  rc_slice.rs
tests/elf_samples/: cifs.ko
