[package]
name = "elf-explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-windows-gui = {version="1.0.12", default-features=false, features=["dynamic_layout", "frame", "menu", "file-dialog", "list-view", "embed-resource"]}
native-windows-derive = "1.0.3"

[build-dependencies]
embed-resource = "1.6"